# rm_auto_aim

./: CMakeLists.txt  README.md  main.cpp
Configs/camera/: camera.yaml
Configs/detect/: armor-nano-poly-fp16-best.engine  armor-nano-poly-fp32-best.onnx
devices/camera/: mv_camera.cpp
devices/serial/: serial.cpp
modules/: CMakeLists.txt
modules/detect_armour/: detect.cpp  detect.hpp
modules/kalman_filter/: EKF.h  PredictorEKF.cpp  PredictorEKF.hpp
test/: ekf_test.cpp
utils/: robot.hpp
